# Cladel

./: .gitignore  AGENTS.md  README.md  claude.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/: handoff.md  manual.md
sample/: sample.cld
scripts/: check-release.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: auxiliary-windows.json  default.json  node-detail.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs
src-tauri/src/commands/: agent_node_messages.rs  bibtex.rs  core_versions.rs  edge_comments.rs  edges.rs  export.rs  file_commands.rs  image_import.rs  junctions.rs  layers.rs  literature.rs  mod.rs  nano_banana.rs  node_comments.rs  nodes.rs  note_versions.rs  pdf_export.rs  pdf_import.rs  settings.rs  sync.rs  tab_commands.rs  table_import.rs  typst_engine.rs  typst_render.rs  usage.rs
src-tauri/src/commands/agent/: agent_node.rs  analysis.rs  claude_service.rs  comment_agent.rs  context.rs  gemini_service.rs  mod.rs  paper_chat.rs  parser.rs  prompt.rs  stub_service.rs
src/components/: FileTabBar.tsx  ResizeHandle.tsx  StatusBar.tsx
src/hooks/: useAutonomousTrigger.ts  useIdleDetector.ts  useStructureTrigger.ts
src/lib/: detached-window.ts  i18n.ts  sync-events.ts  tauri-commands.ts  userColors.ts
src/store/: agentNodeStore.ts  agentStore.ts  consoleStore.ts  exportStore.ts  fileStore.ts  graphStore.ts  layerStore.ts  projectStore.ts  renderStore.ts  settingsStore.ts  syncStore.ts  tabStore.ts  userStore.ts
(+68 files in other folders)
