[package]
name = "cladel-app"
version = "0.1.0"
edition = "2021"
description = "A Tauri App"
default-run = "cladel-app"

[lib]
name = "cladel_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "cladel-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
tauri-plugin-store = "2"
pdf-extract = "0.7"
regex = "1"
image = "0.24"
base64 = "0.22"
genpdf = { version = "0.2", features = ["images"] }
pulldown-cmark = "0.12"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
calamine = "0.24"
csv = "1.3"
# Typst typesetting engine (in-process) for the render/export pipeline
typst = "0.14"
typst-as-lib = "0.15"
typst-pdf = "0.14"
typst-render = "0.14"
